# AnalogSAPR

./: .gitignore  AGENTS.md  CMakeLists.txt  Issue_hxl.md  PR_WRITING_RULES.md  README.md  pyproject.toml  启动文件.md
cases/4ring_2_big8_no_symmetry/input/: constraints.txt  modules.txt  nets.txt  pins.txt
cases/4ring_2_big8_no_symmetry/output/: placement.txt
cases/4ring_2_complex_no_symmetry_perturbed/: .gitignore
cases/4ring_2_complex_no_symmetry_perturbed/input/: constraints.txt  modules.txt
cases/4ring_2_complex_no_symmetry_perturbed/output/: placement.txt  routing.txt
cases/4ring_2_complex_symmetry/input/: constraints.txt  pins.txt
cases/4ring_2_complex_symmetry/output/: placement.txt
cases/4ring_2_complex_symmetry_perturbed/input/: constraints.txt  pins.txt
cases/4ring_2_complex_symmetry_perturbed_2groups/input/: constraints.txt  modules.txt  nets.txt
cases/4ring_2_left6_no_symmetry/: .gitignore
cases/4ring_2_left6_no_symmetry/input/: constraints.txt  nets.txt  pins.txt
cases/4ring_2_left6_no_symmetry/input_m2_active_overflight/: constraints.txt  modules.txt
cases/4ring_2_left6_no_symmetry/output/: placement.txt  routing.txt
cases/4ring_2_left6_no_symmetry/output_debug/: placement.txt  routing.txt  routing_debug.json
cases/4ring_2_left6_no_symmetry/output_paper_aligned_sa100_layers2_manual/: routing_debug.json  sa_feedback_converge.json  sa_trace.json  sa_trace.xlsx
cases/4ring_2_left6_no_symmetry/output_sa100_layers1/: routing.txt  (+1 more)
cpp/: CMakeLists.txt
cpp/include/core/: geometry.hpp  model.hpp  transform.hpp
cpp/include/io/: parser.hpp  writer.hpp
cpp/include/routing/: astar.hpp  global_router.hpp  grid.hpp  layer.hpp  obstacle.hpp  path.hpp  routing_context.hpp  topology.hpp
cpp/src/: main.cpp
cpp/src/core/: geometry.cpp  transform.cpp
cpp/src/io/: parser.cpp  writer.cpp
cpp/src/routing/: astar.cpp  global_router.cpp  grid.cpp  layer.cpp  obstacle.cpp  routing_context.cpp  topology.cpp
docs/: REPRODUCTION_PLAN.md  lcp_logic.md  via_policy.md  参数.md
include/sapr/: btree_trace.hpp  constraints.hpp  geometry.hpp  io.hpp  lcp_generator.hpp  model.hpp  optimizer.hpp  router.hpp  routing_evaluator.hpp  sa_btree_dump.hpp  tree.hpp
input/: constraints.txt  modules.txt  nets.txt  pins.txt
output/: placement.txt  routing.txt
output/codex_copy_run_min3/: placement.txt  routing.txt
output/codex_min3_copy_final_diag/: placement.txt
output/codex_min3_copy_legalized_diag/: placement.txt
output/codex_min3_copy_legalized_diag2/: placement.txt  routing.txt
output/codex_mp_pair_copy_drc_detail/: placement.txt
output/codex_mp_pair_copy_legalized/: routing.txt
output/codex_mp_pair_copy_legalized_diag/: placement.txt
src/: btree_trace.cpp  constraints.cpp  geometry.cpp  io.cpp  lcp_generator.cpp  main.cpp  optimizer.cpp  router.cpp  routing_evaluator.cpp  sa_btree_dump.cpp  tree.cpp
src/routing/: astar.cpp  dp_router.cpp  geometry.cpp  global_router.cpp  grid.cpp  layer.cpp  obstacle.cpp  path_geometry.cpp  routing_context.cpp  topology.cpp  transform.cpp
src/sapr/: __init__.py  cli.py  constraints.py  geometry.py  io.py  model.py  optimizer.py  router.py  tree.py
tests/: render_smoke.cmake  test_constraints.cpp  test_io.cpp  test_io.py  test_lcp_binding.cpp  test_main.cpp  test_router.cpp  test_routing_evaluator.cpp  test_support.hpp  verify_cli_output.cmake  verify_render_layout_transform.py
tmp/codex-diagnose-2groups-l1-strict/: placement.txt
tmp/codex-diagnose-2groups-l3-strict/: btree_trace.json  metrics.json  placement.txt
tmp/codex-diagnose-perturbed-l1-strict/: btree_trace.json  placement.txt
tmp/codex-diagnose-perturbed-l3-strict/: btree_trace.json  metrics.json  placement.txt
tmp/codex-strict-4ring_2_complex_symmetry_perturbed/: metrics.json
tmp/codex-strict-4ring_2_complex_symmetry_perturbed_2groups/: btree_trace.json  metrics.json
tools/: export_sa_trace_xlsx.py  gds2io.py  layout_io_tool.py  net_colors.py  parse_oa.py  plot_sa_analysis.py  render_btree.py  render_layout.py
(+781 files in other folders)
